--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 gunicorn
+matplotlib
 dash
 dash-core-components
 dash-html-components
 dash-daq
 dash-bootstrap-components
-matplotlib
 numpy
 pandas
 plotly
+plotly.graph_objs
+plotly.expressabsl-py==1.0.0
+
